# bedrock-gateway-client

./: LICENSE  README.md  pyproject.toml
bedrock-gateway-client/: .gitignore  README.md
bedrock-gateway-client/bedrock_gateway_client/: __init__.py  cli.py  client.py
bedrock-gateway-client/examples/: roy_morgan_setup.py
bedrock_gateway_client/: __init__.py  client.py  config.py
